# python-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
python_src/python_lib/: __init__.py  main.py  python_lib.pyi
python_src/tests/unit/: test_main.py  test_par_iter_obj_collection_by_ref.py
src/: lib.rs  python_module.rs  tests.rs
src/python/: mod.rs  par_iter_obj_collection_by_ref.rs
